# flipperclaw

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  SETUP.md
esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
esp32/main/: CMakeLists.txt  agent.cpp  agent.h  cli.cpp  cli.h  constants.h  cron.cpp  cron.h  fc_secrets.h.example  idf_component.yml  llm_api.cpp  llm_api.h  main.cpp  memory_store.cpp  memory_store.h  tools.cpp  tools.h  uart_proto.cpp  uart_proto.h  wifi_client.cpp  wifi_client.h
esp32/scripts/: build.sh  flash.sh  setup_idf.sh
flipper/: application.fam  flipperclaw.c  flipperclaw.h  uart_bridge.c  uart_bridge.h  ui_chat.c  ui_chat.h  ui_input.c  ui_input.h  ui_status.c  ui_status.h
