idf_component_register(
    SRCS
        "main.cpp"
        "agent.cpp"
        "uart_proto.cpp"
        "wifi_client.cpp"
        "llm_api.cpp"
        "memory_store.cpp"
        "tools.cpp"
        "cli.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_client
        spiffs
        driver
        esp_timer
        freertos
        esp_log
        esp_event
        esp_netif
        mbedtls
)
